<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">StreamOS</string>
    <string name="title_activity_main">StreamOS</string>
    <string name="package_name">org.streamy.app</string>
    <string name="custom_url_scheme">org.streamy.app</string>
    <string name="up_next">Up next</string>
    <string name="up_next_episode">Up next: S%1$d E%2$d</string>
    <string name="up_next_episode_autoplay">Up next: S%1$d E%2$d\nPlays automatically when this episode ends</string>
    <string name="next_episode">Next Episode</string>
    <string name="not_now">Not Now</string>
    <string name="intro_skip_title">Intro detected</string>
    <string name="recap_skip_title">Recap detected</string>
    <string name="segment_skip_detail">Episode marker ready</string>
    <string name="segment_skip_detail_format">Skip ahead to %1$s</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="skip_recap">Skip Recap</string>
    <string name="audio_button">Audio</string>
    <string name="audio_button_format">Audio: %1$s</string>
    <string name="audio_tracks_title">Audio Tracks</string>
    <string name="audio_tracks_loading">Audio tracks are still loading.</string>
    <plurals name="audio_tracks_available">
        <item quantity="one">%1$d audio track available. Your language choice is remembered for future playback.</item>
        <item quantity="other">%1$d audio tracks available. Your language choice is remembered for future playback.</item>
    </plurals>
    <string name="audio_track_auto">Auto (stream default)</string>
    <string name="audio_track_selected_suffix">[SELECTED]</string>
    <string name="audio_track_playing_suffix">[PLAYING]</string>
    <string name="audio_track_changed">Audio changed to %1$s</string>
    <string name="audio_track_auto_enabled">Audio selection set to Auto</string>
    <string name="close_audio_tracks">Close</string>
</resources>
